[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytypetoform"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Beltrán Offerrall" }]
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.hatch.version]
path = "src/pytypetoform/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pytypetoform"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
